[project]
name = "bist-signal-bot"
version = "0.1.0"
description = "BIST Signal Bot - Algorithmic signal generator for Borsa Istanbul"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.4.0",
    "yfinance>=0.2.31",
    "typer>=0.12.0",
    "click>=8.0.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "mypy>=1.5.0"
]
ml = [
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0"
]
optional = [
    "pyarrow>=13.0.0",
    "fastparquet>=2023.8.0"
]

[project.scripts]
bist-signal-bot = "bist_signal_bot.__main__:main"

[tool.pytest.ini_options]
testpaths = ["bist_signal_bot/tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
